2009-04-01  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Added todos and fixmes in openvasd module, reformatting, doc.

	* openvasd/openvasd.c: Cosmetics, doc, reformatting, todos and fixmes.

2009-03-20  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/pluginscheduler.c (hash_fill_deps): Improved searching for
	dependencies: If plugin some_path/x.nasl has a dependency on y.nasl
	which can not be found, hash_fill_deps will now make attempt to find the
	dependency in some_path/y.nasl.

2009-03-18  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/oval_plugins.c (ovaldi_launch): Added initial support for
	FDCC checks in the form of support for creating user_items and sid_items
	based on data collected via WMI; note that this is just an early proof
	of concept and contains a number of hacks. oval_plugins.c now uses the
	GString functionality provided by glib to construct the
	collected_objects and system_data elements to account for relations
	between child elements of those elements. Furthermore, oval_plugins.c
	will now attempt to remove stale result files before running ovaldi to
	prevent the reporting of incorrect results when ovaldi failed to
	construct a result file.

2008-03-05  Vlatko Kosturjak <kost@linux.hr>

	* configure, configure.in: Removal of  PCAP_TIMEOUT_IGNORED which
	is not used any more in the source

2009-03-05  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Increased the required openvas-libraries version (2.0.2), for updated
	ssh_login datastructure.

	* configure.in: Increased required openvas-libraries version to 2.0.2.

2009-03-02  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/oval_plugins.c: Code cleanup. Renamed child_setup to
	drop_privileges to make the function intention more clear. Removed
	superfluous result variable.

2009-03-02  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd/oval_plugins.c: Beautification commit, no code changes.